Constant charset String literal (for example, "UTF-8") can be replaced with the predefined StandardCharsets.UTF_8 code. The code after the fix may work faster, because the charset lookup becomes unnecessary. Also, catching UnsupportedEncodingException may become unnecessary as well. In this case, the catch block will be removed automatically.